<resources>
    <string name="app_name">ActivityTest</string>
    <string name="first_activity">First Activity</string>
    <string name="second_activity">Second Activity</string>
    <string name="third_activity">Third Activity</string>
    <string name="fourth_activity">Fourth Activity</string>
    <string name="target_activity">Target Activity</string>
    <string name="fifth_activity">Fifth Activity</string>
    <string name="sixth_activity">Sixth Activity</string>
    <string name="button_1">Button 1</string>
    <string name="toast_for_button_1">You Clicked Button 1</string>
    <string name="toast_for_button_2">You Clicked Button 2</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="toast_for_add">You Clicked \'Add\'</string>
    <string name="toast_for_remove">You Clicked \'Remove\'</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="launch_browser">Launch Browser</string>
    <string name="third_activity_greet">Hi! There is third activity.</string>
    <string name="dial">Dial</string>
    <string name="transfer_data">Transfer Data</string>
    <string name="to_get_data">To Get Data</string>
    <string name="return_data">Return Data</string>
    <string name="start_first_activity">Start FirstActivity</string>
    <string name="start_second_activity">Start SecondActivity</string>
    <string name="start_third_activity">Start ThirdActivity</string>
    <string name="start_fifth_activity">Start FifthActivity</string>
    <string name="start_sixth_activity">Start SixthActivity</string>
</resources>